tests/negative/unknown_annotation.glyph
module neg

// D27: an unrecognized annotation is a hard error, so a typo cannot masquerade
// as a working annotation. `@puer` is not `@pure`.
@puer
fn f() -> number {
  return 1
}
